Zero remaining time handling, alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ h1 {
 	text-align: center; 
 	font-family: 'Share Tech Mono', monospace;
 	color: yellow;
+	margin: 0;
 }
 
 .red {
